--- a/Tensorboard Profiler.ipynb
+++ b/Tensorboard Profiler.ipynb
@@ -49,7 +49,7 @@
     "tags": []
    },
    "source": [
-    "<center><img src=\"0.png\" style=\"width: 500px;\"/>"
+    "<center><img src=\"0.png\" style=\"width: 800px;\"/>"
    ]
   },
   {
@@ -85,13 +85,21 @@
    "source": [
     "### Description:\n",
     "\n",
-    "MNIST (\"Modified National Institute of Standards and Technology\") is the de facto “hello world” dataset of computer vision. Since its release in 1999, this classic dataset of handwritten images has served as the basis for benchmarking classification algorithms. As new machine learning techniques emerge, MNIST remains a reliable resource for researchers and learners alike.\n",
+    "There is a common business saying that you can’t improve what you don’t measure. This is true in machine learning as well. There are various tools for measuring the performance of a deep learning model: Neptune AI, MLflow, Weights and Biases, Guild AI, just to mention a few. In this piece, we’ll focus on TensorFlow’s open-source visualization toolkit TensorBoard. \n",
     "\n",
-    "In this competition, your goal is to correctly identify digits from a dataset of tens of thousands of handwritten images. We’ve curated a set of tutorial-style kernels which cover everything from regression to neural networks. We encourage you to experiment with different algorithms to learn first-hand what works well and how techniques compare.\n",
+    "The tool enables you to track various metrics such as accuracy and log loss on training or validation set. As we shall see in this piece, TensorBoard provides several tools that we can use in machine learning experimentation. The tool is also fairly easy to use. \n",
+    "\n",
+    "Here are some things we can explore with Tensorboard:\n",
+    "* Visualizing images in TensorBoard\n",
+    "* Checking model weights and biases on TensorBoard\n",
+    "* Visualizing the model’s architecture\n",
+    "* Sending a visual of the confusion matrix to TensorBoard\n",
+    "* Profiling your application so as to see its performance, and\n",
+    "* Using TensorBoard with Keras, PyTorch, and XGBoost\n",
     "\n",
     "\n",
     "### Acknowledgement: \n",
-    "The dataset is referred from Kaggle Datasets.\n",
+    "Tensorflow.org, Neptune.ai, Coursera, Google.\n",
     "\n",
     "### Objective:\n",
     "- Optimize TensorFlow performance using the Profiler"
@@ -189,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "85ed80c0",
+   "id": "2006f3d3",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4d1c81fd",
+   "id": "1875d037",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b9494a1f",
+   "id": "ccb9e285",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a588b2a8",
+   "id": "9575bc78",
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "368304d7",
+   "id": "cf6e018a",
    "metadata": {},
    "source": [
     "The Profile tab opens the Overview page which shows you a high-level summary of your model performance. Looking at the Step-time Graph on the right, you can see that the model is highly input bound (i.e., it spends a lot of time in the data input piepline). The Overview page also gives you recommendations on potential next steps you can follow to optimize your model performance."
@@ -635,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12f17876",
+   "id": "7bb4d7c6",
    "metadata": {},
    "source": [
     "![](1.png)"
@@ -643,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "492659bc",
+   "id": "ffee2daf",
    "metadata": {},
    "source": [
     "Use the Trace Viewer to locate the performance bottlenecks in your input pipeline. The image below is a snapshot of the performance profile."
@@ -651,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "442aac30",
+   "id": "4672a50f",
    "metadata": {},
    "source": [
     "![](2.png)"
@@ -659,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8b9ff8b",
+   "id": "d2291729",
    "metadata": {},
    "source": [
     "Looking at the event traces, you can see that the GPU is inactive while the tf_data_iterator_get_next op is running on the CPU. This op is responsible for processing the input data and sending it to the GPU for training. As a general rule of thumb, it is a good idea to always keep the device (GPU/TPU) active."
@@ -667,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46a001de",
+   "id": "0e0ace9a",
    "metadata": {},
    "source": [
     "---"
@@ -675,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4044e0f8",
+   "id": "04b81d32",
    "metadata": {},
    "source": [
     "# <center> 4. Model Optimization \n",
@@ -685,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3f666074",
+   "id": "8ea22150",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45a17c65",
+   "id": "993a2521",
    "metadata": {},
    "source": [
     "Let us use the tf.data API to optimize the input pipeline. \n",
@@ -710,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c067fae9",
+   "id": "38381988",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1a9cc682",
+   "id": "33905750",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e299ba7e",
+   "id": "eb6f640c",
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "52e5f6be",
+   "id": "1e03e579",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc93b8be",
+   "id": "0ad6bd6c",
    "metadata": {},
    "source": [
     "The Trace Viewer shows that the tf_data_iterator_get_next op executes much faster. The GPU therefore gets a steady stream of data to perform training and achieves much better utilization through model training."
@@ -817,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5e94957",
+   "id": "b532c523",
    "metadata": {},
    "source": [
     "The Profile tab opens the Overview page which shows you a high-level summary of your model performance. Looking at the Step-time Graph on the right, you can see that the model is highly input bound (i.e., it spends a lot of time in the data input piepline). The Overview page also gives you recommendations on potential next steps you can follow to optimize your model performance."
@@ -825,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37bc0d56",
+   "id": "969d3769",
    "metadata": {},
    "source": [
     "![](3.png)"
@@ -833,7 +841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6342dd12",
+   "id": "bca553eb",
    "metadata": {},
    "source": [
     "From the Overview page, you can see that the Average Step time has reduced as has the Input Step time. The Step-time Graph also indicates that the model is no longer highly input bound. Open the Trace Viewer to examine the trace events with the optimized input pipeline."
@@ -841,7 +849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6a2aa5b",
+   "id": "7b98698a",
    "metadata": {},
    "source": [
     "![](4.png)"
@@ -849,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41c420be",
+   "id": "60369b2b",
    "metadata": {},
    "source": [
     "The Trace Viewer shows that the tf_data_iterator_get_next op executes much faster. The GPU therefore gets a steady stream of data to perform training and achieves much better utilization through model training."
